# powerline-keebs

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: pypi-publish.yml
src/powerline_keebs/: __init__.py  segments.py
