[tool.poetry]
name = "powerline-keebs"
version = "0.2.1"
description = "A custom Powerline segment for displaying currently connected keyboards"
authors = ["Jordan Duabe <me@jduabe.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/j4ckofalltrades/powerline-keebs"
repository = "https://github.com/j4ckofalltrades/powerline-keebs"
keywords = ["powerline", "keyboards"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/j4ckofalltrades/powerline-keebs/issues"

[tool.poetry.dependencies]
python = "^3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
