[metadata]
name = powerline-keebs
description = A custom Powerline segment for displaying currently connected keyboards
version = 0.1.0
author = Jordan Duabe
author_email = me@jduabe.dev
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/j4ckofalltrades/powerline-keebs
keywords = powerline, keyboard
project_urls =
    Source = https://github.com/j4ckofalltrades/powerline-keebs
    Tracker = https://github.com/j4ckofalltrades/powerline-keebs/issues
    Download = https://pypi.org/project/powerline-keeb/#files
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Environment :: Console
    Environment :: Plugins
    Intended Audience :: Developers
    Topic :: Terminals

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    powerline-status>=2.7

[options.extras_require]
test =
    pytest
    pytest-cov

[options.packages.find]
where = src
